--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField  "String", "API_KEY", "\"c4cc0326a21919184ed91baf888a80a9\""
+        buildConfigField  "String", "API_KEY", "\"code_here\""
     }
     buildTypes {
         release {
